--- a/diamonds.ipynb
+++ b/diamonds.ipynb
@@ -11,29 +11,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "colab_type": "text",
     "id": "ZjMc9YoQ5Uwc"
-   },
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Zc4Ows4b7RRY"
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf"
    ]
   },
   {
@@ -47,6 +37,57 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv('https://github.com/vaksakalli/datasets/raw/master/diamonds.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of contents\n",
+    "1. [Introduction](#introduction)\n",
+    "2. [Data](#data)\n",
+    "    1. [Statsmodel Linear Regression Summary](#substats)\n",
+    "3. [Another paragraph](#paragraph2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is the introduction <a name=\"introduction\"></a>\n",
+    "Some introduction text, formatted in heading 2 style"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Insights <a name=\"data\"></a>\n",
+    "A summary of plots etc., formatted in heading 2 style"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Insights <a name=\"substats\"></a>\n",
+    "A summary of plots etc., formatted in heading 2 style"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "In [4]: diamonds_data = sm.datasets.get_rdataset(\"\", \"HistData\").data\n",
+    "\n",
+    "# Fit regression model (using the natural log of one of the regressors)\n",
+    "In [5]: results = smf.ols('Carat ~ Cut + np.log(Pop1831)', data=diamonds_data).fit()\n",
+    "\n",
+    "# Inspect the results\n",
+    "In [6]: print(results.summary())"
    ]
   },
   {
@@ -1055,9 +1096,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data",
    "language": "python",
-   "name": "python3"
+   "name": "data"
   },
   "language_info": {
    "codemirror_mode": {
