Added statsmodels regression table

--- a/diamonds.ipynb
+++ b/diamonds.ipynb
@@ -76,18 +76,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       carat        cut color\n",
+      "28546   0.30    Premium     I\n",
+      "21023   1.51    Premium     D\n",
+      "4555    0.90  Very Good     H\n",
+      "10454   1.00    Premium     H\n",
+      "52073   0.73      Ideal     F\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  carat   R-squared:                       0.124\n",
+      "Model:                            OLS   Adj. R-squared:                  0.123\n",
+      "Method:                 Least Squares   F-statistic:                     761.0\n",
+      "Date:                Fri, 04 Oct 2019   Prob (F-statistic):               0.00\n",
+      "Time:                        16:06:14   Log-Likelihood:                -32710.\n",
+      "No. Observations:               53940   AIC:                         6.544e+04\n",
+      "Df Residuals:                   53929   BIC:                         6.554e+04\n",
+      "Df Model:                          10                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "====================================================================================\n",
+      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------\n",
+      "Intercept            0.8886      0.012     72.724      0.000       0.865       0.913\n",
+      "cut[T.Good]         -0.1769      0.013    -13.873      0.000      -0.202      -0.152\n",
+      "cut[T.Ideal]        -0.3150      0.011    -27.453      0.000      -0.338      -0.293\n",
+      "cut[T.Premium]      -0.1407      0.012    -12.037      0.000      -0.164      -0.118\n",
+      "cut[T.Very Good]    -0.2170      0.012    -18.422      0.000      -0.240      -0.194\n",
+      "color[T.E]          -0.0017      0.007     -0.238      0.812      -0.015       0.012\n",
+      "color[T.F]           0.0747      0.007     10.591      0.000       0.061       0.089\n",
+      "color[T.G]           0.1131      0.007     16.578      0.000       0.100       0.126\n",
+      "color[T.H]           0.2440      0.007     33.556      0.000       0.230       0.258\n",
+      "color[T.I]           0.3622      0.008     44.781      0.000       0.346       0.378\n",
+      "color[T.J]           0.4863      0.010     48.778      0.000       0.467       0.506\n",
+      "==============================================================================\n",
+      "Omnibus:                     6387.406   Durbin-Watson:                   0.223\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             9333.429\n",
+      "Skew:                           0.894   Prob(JB):                         0.00\n",
+      "Kurtosis:                       3.977   Cond. No.                         15.9\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data\n",
-    "In [4]: diamonds_data = sm.datasets.get_rdataset(\"\", \"HistData\").data\n",
+    "diamonds = pd.read_csv('https://github.com/vaksakalli/datasets/raw/master/diamonds.csv')\n",
+    "diamonds = diamonds.iloc[:,[0,1,2]]\n",
     "\n",
-    "# Fit regression model (using the natural log of one of the regressors)\n",
-    "In [5]: results = smf.ols('Carat ~ Cut + np.log(Pop1831)', data=diamonds_data).fit()\n",
+    "print(diamonds.sample(5))\n",
+    "diamonds.columns = ['carat', 'cut', 'color']\n",
     "\n",
-    "# Inspect the results\n",
-    "In [6]: print(results.summary())"
+    "model = sm.formula.ols(formula = \"carat ~ cut + color\", data = diamonds)\n",
+    "model_fitted = model.fit()\n",
+    "print(model_fitted.summary())"
    ]
   },
   {
